--- a/GT.CSS
+++ b/GT.CSS
@@ -113,6 +113,107 @@
 .heropage p {
    margin-top: 20px 0;
 }
+
+/* slider */
+.slider {
+   width: 800px;
+   height: 500px;
+   border-radius: 10px;
+   /* overflow: hidden; */
+   overflow: visible;
+}
+
+.slides{
+   width: 500%;
+   height: 500px;
+   display: flex;
+}
+
+.slides input {
+   display: none;
+}
+
+.slide{
+   width: 20%;
+   transition: 2s;
+}
+
+.slide img {
+   width: 1500px;
+   height: 750px;
+   border-radius: 10px;
+
+}
+
+.navigation-manual{
+   position: absolute;
+   width: 800px;
+   margin-top: -40px;
+   display: flex;
+   justify-content: center;
+}
+
+.manual-btn {
+   border: 2px solid #fff;
+   padding: 5px;
+   border-radius: 10px;
+   cursor: pointer;
+   transition: 1s;
+}
+
+.manual-btn:not(:last-child){
+   margin-right: 40px;
+}
+
+.manual-btn:hover{
+   background: #fff;
+}
+
+#radio1:checked ~ .first {
+   margin-left: 0;
+}
+#radio2:checked ~ .first {
+   margin-left: -20%;
+}
+#radio3:checked ~ .first {
+   margin-left: -40%;
+}
+#radio4:checked ~ .first {
+   margin-left: -60%;
+}
+
+.navigation-auto {
+   position: absolute;
+   display: flex;
+   width: 800px;
+   justify-content: center;
+   margin-top: 460px;
+}
+
+.navigation-auto div {
+border: 2px solid #fff;
+padding: 5px;
+border-radius: 10px;
+transition: 1s;
+}
+
+.navigation-auto div:not(:last-child){
+   margin-right: 40px;
+}
+
+#radio1:checked ~ .navigation-auto .auto-btn1 {
+   background: #fff;
+}
+#radio2:checked ~ .navigation-auto .auto-btn2 {
+   background: #fff;
+}
+#radio3:checked ~ .navigation-auto .auto-btn3 {
+   background: #fff;
+}
+#radio4:checked ~ .navigation-auto .auto-btn4 {
+   background: #fff;
+}
+
 /* Utilities */
 
 .container {
